--- a/.github/workflows/pipelineA.yml
+++ b/.github/workflows/pipelineA.yml
@@ -16,3 +16,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  Test-Rust-Shit:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo " Yeah I wrote my first glow job "
+    
