--- a/.github/workflows/pipelineA.yml
+++ b/.github/workflows/pipelineA.yml
@@ -5,7 +5,7 @@ jobs:
   Main:
     runs-on: windows-latest
     steps:
-      - name: "Build app"
+      - name: Build app
         uses: actions/checkout@v3
       - run: |
           echo "Trying dir"
